<resources>
    <string name="app_name">Kontrolki</string>
    <string name="tv1tekst">Imię:</string>
    <string name="tv2tekst">Nazwisko: </string>
    <string name="tv3tekst">Data urodzenia:</string>
    <string name="tv4tekst">Zainteresowania:</string>
    <string name="rb1tekst">mężczyzna</string>
    <string name="rb2tekst">kobieta</string>
    <string name="btn1tekst">Wczytaj</string>
    <string name="btn2tekst">Zakończ</string>
    <string name="chk1tekst">film</string>
    <string name="chk2tekst">literatura</string>
    <string name="chk3tekst">muzyka</string>
</resources>
